@@ -1,3 +1,9 @@
+2008-05-20  Badlop  <badlop@process-one.net>
+
+	* src/mod_xmlrpc.erl: New call get_roster; works only with
+	mod_roster_odbc
+	* README.txt: Likewise
+
 2008-05-19  Badlop  <badlop@process-one.net>
 
 	* src/mod_xmlrpc.erl: New function check_account (thanks to
